# getting-into-python-classes

./: README.md  clean.py  example1.py  example_01_as class.py  example_01_as_class.py  example_01_before.py  example_01_below_line.py  example_01_distance_between.py  example_01_distance_between_fixed.py  example_01_polar_coords.py  example_01_polar_coords_fixed.py  example_01_with_methods.py  example_02_after.py  example_02_as_class.py  example_02_with_methods.py  pyproject.toml  step_01_part_01.py  step_01_part_02.py  step_02_part_01.py  step_03_part_01.py  step_03_part_02.py  step_03_part_03.py  step_04_part_01.py  step_05_part_01.py  step_05_part_02.py  step_05_part_03.py  step_06_part_01.py  step_06_part_02.py  whoops.py  whoops_again.py
